parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program vdecl
   3          | program methdecl

   4  methdecl : METH DATATYPE ID LEFTPAREN meth_params RIGHTPAREN statement_list END

   5  meth_params :
   6              | param_list

   7  param_list : param_decl
   8             | param_list COMMA param_decl

   9  param_decl : DATATYPE ID

  10  statement_list :
  11                 | statement_list statement

  12  statement : expr SEMICOLON
  13            | RETURN expr_opt SEMICOLON
  14            | IF LEFTPAREN expr RIGHTPAREN statement END
  15            | IF LEFTPAREN expr RIGHTPAREN statement ELSE statement END
  16            | WHILE LEFTPAREN expr RIGHTPAREN statement END
  17            | FOREACH LEFTPAREN param_decl IN ID RIGHTPAREN statement END

  18  vdecl : DATATYPE ID SEMICOLON
  19        | NOTE ID VASSIGN LEFTPAREN NOTECONST COMMA OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON
  20        | INT ID VASSIGN INTLITERAL SEMICOLON
  21        | CHORD ID VASSIGN LEFTPAREN LBRAC generic_list RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON
  22        | SCALE ID VASSIGN LBRAC generic_list RBRAC
  23        | STANZA ID VASSIGN LBRAC generic_list RBRAC
  24        | SCORE ID VASSIGN LBRAC generic_list RBRAC

  25  generic_list :
  26               | generic_list COMMA ID

  27  duration_expr : DURATIONINT
  28                | DURATIONCONST
  29                | duration_expr PLUS duration_expr
  30                | duration_expr MINUS duration_expr
  31                | duration_expr TIMES duration_expr
  32                | duration_expr DIVIDE duration_expr

  33  expr_opt :
  34           | expr

  35  expr : ID
  36       | ID DOT ID
  37       | INTLITERAL
  38       | expr ASSIGN expr
  39       | expr PLUSEQ expr
  40       | expr MINUSEQ expr
  41       | expr TIMESEQ expr
  42       | expr DIVIDEEQ expr
  43       | expr MODEQ expr
  44       | expr PLUS expr
  45       | expr MINUS expr
  46       | expr TIMES expr
  47       | expr DIVIDE expr
  48       | expr MOD expr
  49       | expr IS expr
  50       | expr ISNT expr
  51       | expr LT expr
  52       | expr LEQ expr
  53       | expr GT expr
  54       | expr GEQ expr
  55       | expr PLUSPLUS
  56       | expr MINUSMINUS
  57       | expr SHARP
  58       | expr FLAT
  59       | expr RAISE
  60       | expr LOWER
  61       | LEFTPAREN expr RIGHTPAREN
  62       | ID LEFTPAREN actuals_opt RIGHTPAREN
  63       | ID LBRAC expr RBRAC

  64  actuals_opt :
  65              | actuals_list

  66  actuals_list : expr
  67               | actuals_list COMMA expr

  68  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (68)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . vdecl  (2)
	program : program . methdecl  (3)
	%entry% : '\001' program .  (68)

	DATATYPE  shift 4
	INT  shift 5
	NOTE  shift 6
	CHORD  shift 7
	SCALE  shift 8
	STANZA  shift 9
	SCORE  shift 10
	METH  shift 11
	$end  reduce 68

	vdecl  goto 12
	methdecl  goto 13


state 4
	vdecl : DATATYPE . ID SEMICOLON  (18)

	ID  shift 14
	.  error


state 5
	vdecl : INT . ID VASSIGN INTLITERAL SEMICOLON  (20)

	ID  shift 15
	.  error


state 6
	vdecl : NOTE . ID VASSIGN LEFTPAREN NOTECONST COMMA OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	ID  shift 16
	.  error


state 7
	vdecl : CHORD . ID VASSIGN LEFTPAREN LBRAC generic_list RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON  (21)

	ID  shift 17
	.  error


state 8
	vdecl : SCALE . ID VASSIGN LBRAC generic_list RBRAC  (22)

	ID  shift 18
	.  error


state 9
	vdecl : STANZA . ID VASSIGN LBRAC generic_list RBRAC  (23)

	ID  shift 19
	.  error


state 10
	vdecl : SCORE . ID VASSIGN LBRAC generic_list RBRAC  (24)

	ID  shift 20
	.  error


state 11
	methdecl : METH . DATATYPE ID LEFTPAREN meth_params RIGHTPAREN statement_list END  (4)

	DATATYPE  shift 21
	.  error


state 12
	program : program vdecl .  (2)

	.  reduce 2


state 13
	program : program methdecl .  (3)

	.  reduce 3


state 14
	vdecl : DATATYPE ID . SEMICOLON  (18)

	SEMICOLON  shift 22
	.  error


state 15
	vdecl : INT ID . VASSIGN INTLITERAL SEMICOLON  (20)

	VASSIGN  shift 23
	.  error


state 16
	vdecl : NOTE ID . VASSIGN LEFTPAREN NOTECONST COMMA OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	VASSIGN  shift 24
	.  error


state 17
	vdecl : CHORD ID . VASSIGN LEFTPAREN LBRAC generic_list RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON  (21)

	VASSIGN  shift 25
	.  error


state 18
	vdecl : SCALE ID . VASSIGN LBRAC generic_list RBRAC  (22)

	VASSIGN  shift 26
	.  error


state 19
	vdecl : STANZA ID . VASSIGN LBRAC generic_list RBRAC  (23)

	VASSIGN  shift 27
	.  error


state 20
	vdecl : SCORE ID . VASSIGN LBRAC generic_list RBRAC  (24)

	VASSIGN  shift 28
	.  error


state 21
	methdecl : METH DATATYPE . ID LEFTPAREN meth_params RIGHTPAREN statement_list END  (4)

	ID  shift 29
	.  error


state 22
	vdecl : DATATYPE ID SEMICOLON .  (18)

	.  reduce 18


state 23
	vdecl : INT ID VASSIGN . INTLITERAL SEMICOLON  (20)

	INTLITERAL  shift 30
	.  error


state 24
	vdecl : NOTE ID VASSIGN . LEFTPAREN NOTECONST COMMA OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	LEFTPAREN  shift 31
	.  error


state 25
	vdecl : CHORD ID VASSIGN . LEFTPAREN LBRAC generic_list RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON  (21)

	LEFTPAREN  shift 32
	.  error


state 26
	vdecl : SCALE ID VASSIGN . LBRAC generic_list RBRAC  (22)

	LBRAC  shift 33
	.  error


state 27
	vdecl : STANZA ID VASSIGN . LBRAC generic_list RBRAC  (23)

	LBRAC  shift 34
	.  error


state 28
	vdecl : SCORE ID VASSIGN . LBRAC generic_list RBRAC  (24)

	LBRAC  shift 35
	.  error


state 29
	methdecl : METH DATATYPE ID . LEFTPAREN meth_params RIGHTPAREN statement_list END  (4)

	LEFTPAREN  shift 36
	.  error


state 30
	vdecl : INT ID VASSIGN INTLITERAL . SEMICOLON  (20)

	SEMICOLON  shift 37
	.  error


state 31
	vdecl : NOTE ID VASSIGN LEFTPAREN . NOTECONST COMMA OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	NOTECONST  shift 38
	.  error


state 32
	vdecl : CHORD ID VASSIGN LEFTPAREN . LBRAC generic_list RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON  (21)

	LBRAC  shift 39
	.  error


state 33
	vdecl : SCALE ID VASSIGN LBRAC . generic_list RBRAC  (22)
	generic_list : .  (25)

	.  reduce 25

	generic_list  goto 40


state 34
	vdecl : STANZA ID VASSIGN LBRAC . generic_list RBRAC  (23)
	generic_list : .  (25)

	.  reduce 25

	generic_list  goto 41


state 35
	vdecl : SCORE ID VASSIGN LBRAC . generic_list RBRAC  (24)
	generic_list : .  (25)

	.  reduce 25

	generic_list  goto 42


state 36
	methdecl : METH DATATYPE ID LEFTPAREN . meth_params RIGHTPAREN statement_list END  (4)
	meth_params : .  (5)

	DATATYPE  shift 43
	RIGHTPAREN  reduce 5

	meth_params  goto 44
	param_list  goto 45
	param_decl  goto 46


state 37
	vdecl : INT ID VASSIGN INTLITERAL SEMICOLON .  (20)

	.  reduce 20


state 38
	vdecl : NOTE ID VASSIGN LEFTPAREN NOTECONST . COMMA OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	COMMA  shift 47
	.  error


state 39
	vdecl : CHORD ID VASSIGN LEFTPAREN LBRAC . generic_list RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON  (21)
	generic_list : .  (25)

	.  reduce 25

	generic_list  goto 48


state 40
	vdecl : SCALE ID VASSIGN LBRAC generic_list . RBRAC  (22)
	generic_list : generic_list . COMMA ID  (26)

	RBRAC  shift 49
	COMMA  shift 50
	.  error


state 41
	vdecl : STANZA ID VASSIGN LBRAC generic_list . RBRAC  (23)
	generic_list : generic_list . COMMA ID  (26)

	RBRAC  shift 51
	COMMA  shift 50
	.  error


state 42
	vdecl : SCORE ID VASSIGN LBRAC generic_list . RBRAC  (24)
	generic_list : generic_list . COMMA ID  (26)

	RBRAC  shift 52
	COMMA  shift 50
	.  error


state 43
	param_decl : DATATYPE . ID  (9)

	ID  shift 53
	.  error


state 44
	methdecl : METH DATATYPE ID LEFTPAREN meth_params . RIGHTPAREN statement_list END  (4)

	RIGHTPAREN  shift 54
	.  error


state 45
	meth_params : param_list .  (6)
	param_list : param_list . COMMA param_decl  (8)

	COMMA  shift 55
	RIGHTPAREN  reduce 6


state 46
	param_list : param_decl .  (7)

	.  reduce 7


state 47
	vdecl : NOTE ID VASSIGN LEFTPAREN NOTECONST COMMA . OCTAVE COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	OCTAVE  shift 56
	.  error


state 48
	vdecl : CHORD ID VASSIGN LEFTPAREN LBRAC generic_list . RBRAC COMMA duration_expr RIGHTPAREN SEMICOLON  (21)
	generic_list : generic_list . COMMA ID  (26)

	RBRAC  shift 57
	COMMA  shift 50
	.  error


state 49
	vdecl : SCALE ID VASSIGN LBRAC generic_list RBRAC .  (22)

	.  reduce 22


state 50
	generic_list : generic_list COMMA . ID  (26)

	ID  shift 58
	.  error


state 51
	vdecl : STANZA ID VASSIGN LBRAC generic_list RBRAC .  (23)

	.  reduce 23


state 52
	vdecl : SCORE ID VASSIGN LBRAC generic_list RBRAC .  (24)

	.  reduce 24


state 53
	param_decl : DATATYPE ID .  (9)

	.  reduce 9


state 54
	methdecl : METH DATATYPE ID LEFTPAREN meth_params RIGHTPAREN . statement_list END  (4)
	statement_list : .  (10)

	.  reduce 10

	statement_list  goto 59


state 55
	param_list : param_list COMMA . param_decl  (8)

	DATATYPE  shift 43
	.  error

	param_decl  goto 60


state 56
	vdecl : NOTE ID VASSIGN LEFTPAREN NOTECONST COMMA OCTAVE . COMMA duration_expr RIGHTPAREN SEMICOLON  (19)

	COMMA  shift 61
	.  error


state 57
	vdecl : CHORD ID VASSIGN LEFTPAREN LBRAC generic_list RBRAC . COMMA duration_expr RIGHTPAREN SEMICOLON  (21)

	COMMA  shift 62
	.  error


state 58
	generic_list : generic_list COMMA ID .  (26)

	.  reduce 26


state 59
	methdecl : METH DATATYPE ID LEFTPAREN meth_params RIGHTPAREN statement_list . END  (4)
	statement_list : statement_list . statement  (11)

	INTLITERAL  shift 63
	ID  shift 64
	IF  shift 65
	WHILE  shift 66
	FOREACH  shift 67
	LEFTPAREN  shift 68
	RETURN  shift 69
	END  shift 70
	.  error

	statement  goto 71
	expr  goto 72


state 60
	param_list : param_list COMMA param_decl .  (8)

	.  reduce 8


state 61
	vdecl : NOTE ID VASSIGN LEFTPAREN NOTECONST COMMA OCTAVE COMMA . duration_expr RIGHTPAREN SEMICOLON  (19)

	DURATIONINT  shift 73
	DURATIONCONST  shift 74
	.  error

	duration_expr  goto 75


state 62
	vdecl : CHORD ID VASSIGN LEFTPAREN LBRAC generic_list RBRAC COMMA . duration_expr RIGHTPAREN SEMICOLON  (21)

	DURATIONINT  shift 73
	DURATIONCONST  shift 74
	.  error

	duration_expr  goto 76


state 63
	expr : INTLITERAL .  (37)

	.  reduce 37


state 64
	expr : ID .  (35)
	expr : ID . DOT ID  (36)
	expr : ID . LEFTPAREN actuals_opt RIGHTPAREN  (62)
	expr : ID . LBRAC expr RBRAC  (63)

	LEFTPAREN  shift 77
	LBRAC  shift 78
	DOT  shift 79
	ASSIGN  reduce 35
	PLUSEQ  reduce 35
	MINUSEQ  reduce 35
	TIMESEQ  reduce 35
	DIVIDEEQ  reduce 35
	MOD  reduce 35
	MODEQ  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	TIMES  reduce 35
	DIVIDE  reduce 35
	IS  reduce 35
	ISNT  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	PLUSPLUS  reduce 35
	MINUSMINUS  reduce 35
	SHARP  reduce 35
	FLAT  reduce 35
	RAISE  reduce 35
	LOWER  reduce 35
	RIGHTPAREN  reduce 35
	RBRAC  reduce 35
	SEMICOLON  reduce 35
	COMMA  reduce 35


state 65
	statement : IF . LEFTPAREN expr RIGHTPAREN statement END  (14)
	statement : IF . LEFTPAREN expr RIGHTPAREN statement ELSE statement END  (15)

	LEFTPAREN  shift 80
	.  error


state 66
	statement : WHILE . LEFTPAREN expr RIGHTPAREN statement END  (16)

	LEFTPAREN  shift 81
	.  error


state 67
	statement : FOREACH . LEFTPAREN param_decl IN ID RIGHTPAREN statement END  (17)

	LEFTPAREN  shift 82
	.  error


state 68
	expr : LEFTPAREN . expr RIGHTPAREN  (61)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 83


state 69
	statement : RETURN . expr_opt SEMICOLON  (13)
	expr_opt : .  (33)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	SEMICOLON  reduce 33

	expr  goto 84
	expr_opt  goto 85


state 70
	methdecl : METH DATATYPE ID LEFTPAREN meth_params RIGHTPAREN statement_list END .  (4)

	.  reduce 4


state 71
	statement_list : statement_list statement .  (11)

	.  reduce 11


state 72
	statement : expr . SEMICOLON  (12)
	expr : expr . ASSIGN expr  (38)
	expr : expr . PLUSEQ expr  (39)
	expr : expr . MINUSEQ expr  (40)
	expr : expr . TIMESEQ expr  (41)
	expr : expr . DIVIDEEQ expr  (42)
	expr : expr . MODEQ expr  (43)
	expr : expr . PLUS expr  (44)
	expr : expr . MINUS expr  (45)
	expr : expr . TIMES expr  (46)
	expr : expr . DIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . IS expr  (49)
	expr : expr . ISNT expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . PLUSPLUS  (55)
	expr : expr . MINUSMINUS  (56)
	expr : expr . SHARP  (57)
	expr : expr . FLAT  (58)
	expr : expr . RAISE  (59)
	expr : expr . LOWER  (60)

	ASSIGN  shift 86
	PLUSEQ  shift 87
	MINUSEQ  shift 88
	TIMESEQ  shift 89
	DIVIDEEQ  shift 90
	MOD  shift 91
	MODEQ  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TIMES  shift 95
	DIVIDE  shift 96
	IS  shift 97
	ISNT  shift 98
	LT  shift 99
	LEQ  shift 100
	GT  shift 101
	GEQ  shift 102
	PLUSPLUS  shift 103
	MINUSMINUS  shift 104
	SHARP  shift 105
	FLAT  shift 106
	RAISE  shift 107
	LOWER  shift 108
	SEMICOLON  shift 109
	.  error


state 73
	duration_expr : DURATIONINT .  (27)

	.  reduce 27


state 74
	duration_expr : DURATIONCONST .  (28)

	.  reduce 28


state 75
	vdecl : NOTE ID VASSIGN LEFTPAREN NOTECONST COMMA OCTAVE COMMA duration_expr . RIGHTPAREN SEMICOLON  (19)
	duration_expr : duration_expr . PLUS duration_expr  (29)
	duration_expr : duration_expr . MINUS duration_expr  (30)
	duration_expr : duration_expr . TIMES duration_expr  (31)
	duration_expr : duration_expr . DIVIDE duration_expr  (32)

	PLUS  shift 110
	MINUS  shift 111
	TIMES  shift 112
	DIVIDE  shift 113
	RIGHTPAREN  shift 114
	.  error


state 76
	vdecl : CHORD ID VASSIGN LEFTPAREN LBRAC generic_list RBRAC COMMA duration_expr . RIGHTPAREN SEMICOLON  (21)
	duration_expr : duration_expr . PLUS duration_expr  (29)
	duration_expr : duration_expr . MINUS duration_expr  (30)
	duration_expr : duration_expr . TIMES duration_expr  (31)
	duration_expr : duration_expr . DIVIDE duration_expr  (32)

	PLUS  shift 110
	MINUS  shift 111
	TIMES  shift 112
	DIVIDE  shift 113
	RIGHTPAREN  shift 115
	.  error


state 77
	expr : ID LEFTPAREN . actuals_opt RIGHTPAREN  (62)
	actuals_opt : .  (64)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	RIGHTPAREN  reduce 64

	expr  goto 116
	actuals_opt  goto 117
	actuals_list  goto 118


state 78
	expr : ID LBRAC . expr RBRAC  (63)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 119


state 79
	expr : ID DOT . ID  (36)

	ID  shift 120
	.  error


state 80
	statement : IF LEFTPAREN . expr RIGHTPAREN statement END  (14)
	statement : IF LEFTPAREN . expr RIGHTPAREN statement ELSE statement END  (15)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 121


state 81
	statement : WHILE LEFTPAREN . expr RIGHTPAREN statement END  (16)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 122


state 82
	statement : FOREACH LEFTPAREN . param_decl IN ID RIGHTPAREN statement END  (17)

	DATATYPE  shift 43
	.  error

	param_decl  goto 123


state 83
	expr : expr . ASSIGN expr  (38)
	expr : expr . PLUSEQ expr  (39)
	expr : expr . MINUSEQ expr  (40)
	expr : expr . TIMESEQ expr  (41)
	expr : expr . DIVIDEEQ expr  (42)
	expr : expr . MODEQ expr  (43)
	expr : expr . PLUS expr  (44)
	expr : expr . MINUS expr  (45)
	expr : expr . TIMES expr  (46)
	expr : expr . DIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . IS expr  (49)
	expr : expr . ISNT expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . PLUSPLUS  (55)
	expr : expr . MINUSMINUS  (56)
	expr : expr . SHARP  (57)
	expr : expr . FLAT  (58)
	expr : expr . RAISE  (59)
	expr : expr . LOWER  (60)
	expr : LEFTPAREN expr . RIGHTPAREN  (61)

	ASSIGN  shift 86
	PLUSEQ  shift 87
	MINUSEQ  shift 88
	TIMESEQ  shift 89
	DIVIDEEQ  shift 90
	MOD  shift 91
	MODEQ  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TIMES  shift 95
	DIVIDE  shift 96
	IS  shift 97
	ISNT  shift 98
	LT  shift 99
	LEQ  shift 100
	GT  shift 101
	GEQ  shift 102
	PLUSPLUS  shift 103
	MINUSMINUS  shift 104
	SHARP  shift 105
	FLAT  shift 106
	RAISE  shift 107
	LOWER  shift 108
	RIGHTPAREN  shift 124
	.  error


state 84
	expr_opt : expr .  (34)
	expr : expr . ASSIGN expr  (38)
	expr : expr . PLUSEQ expr  (39)
	expr : expr . MINUSEQ expr  (40)
	expr : expr . TIMESEQ expr  (41)
	expr : expr . DIVIDEEQ expr  (42)
	expr : expr . MODEQ expr  (43)
	expr : expr . PLUS expr  (44)
	expr : expr . MINUS expr  (45)
	expr : expr . TIMES expr  (46)
	expr : expr . DIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . IS expr  (49)
	expr : expr . ISNT expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . PLUSPLUS  (55)
	expr : expr . MINUSMINUS  (56)
	expr : expr . SHARP  (57)
	expr : expr . FLAT  (58)
	expr : expr . RAISE  (59)
	expr : expr . LOWER  (60)

	ASSIGN  shift 86
	PLUSEQ  shift 87
	MINUSEQ  shift 88
	TIMESEQ  shift 89
	DIVIDEEQ  shift 90
	MOD  shift 91
	MODEQ  shift 92
	PLUS  shift 93
	MINUS  shift 94
	TIMES  shift 95
	DIVIDE  shift 96
	IS  shift 97
	ISNT  shift 98
	LT  shift 99
	LEQ  shift 100
	GT  shift 101
	GEQ  shift 102
	PLUSPLUS  shift 103
	MINUSMINUS  shift 104
	SHARP  shift 105
	FLAT  shift 106
	RAISE  shift 107
	LOWER  shift 108
	SEMICOLON  reduce 34


state 85
	statement : RETURN expr_opt . SEMICOLON  (13)

	SEMICOLON  shift 125
	.  error


state 86
	expr : expr ASSIGN . expr  (38)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 126


state 87
	expr : expr PLUSEQ . expr  (39)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 127


state 88
	expr : expr MINUSEQ . expr  (40)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error

	expr  goto 128


state 89
	expr : expr TIMESEQ . expr  (41)

	INTLITERAL  shift 63
	ID  shift 64
	LEFTPAREN  shift 68
	.  error
